[package]
name = "bluestation-control"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bluestation-control-service"
path = "src/main.rs"

[dependencies]
tetra-core = { workspace = true }
tetra-entities = { workspace = true }
crossbeam-channel = { workspace = true }

clap = { workspace = true }
tungstenite = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
base64 = "0.22"
argon2 = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
