[package]
name = "bluestation-bs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bluestation-bs"
path = "src/main.rs"

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-entities = { workspace = true }

clap = { workspace = true }
ctrlc = { workspace = true }
rustls = { version = "0.23", default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
