[package]
name = "tetra-entities"
version.workspace = true
edition.workspace = true

[features]
# Default build excludes the Asterisk SIP/RTP bridge so it needs no native
# libtetra-codec. Enable with `--features asterisk` to compile net_asterisk and
# link the TETRA codec.
default = []
asterisk = []
# EchoLink GSM-FR/TETRA audio bridge. Requires libgsm and libtetra-codec.
echolink = []

[dependencies]
tetra-core = { workspace = true }
tetra-config = { workspace = true }
tetra-saps = { workspace = true }
tetra-pdus = { workspace = true }
as-any = { workspace = true }
num = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
soapysdr = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcode = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
tungstenite = { workspace = true }
uuid = { workspace = true }
md5 = "0.7"
base64 = "0.22"
chrono = { workspace = true }
chrono-tz = { workspace = true }
# HTTP client for the dashboard's GitHub update-check and the built-in WX/METAR service.
# rustls-tls (no OpenSSL) keeps cross-compilation to the Pi simple; blocking is fine since
# both uses run on their own short-lived threads.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Unix-only: geteuid() for the OTA source-tree ownership check (dashboard build path).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
